--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,8 @@
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
-    <a href="/cocktails"><i class="fas fa-cocktail"></i></a>
+    <a href="/cocktails"><i class="fas fa-cocktail"></i> Cocktails</a>
     <button class="navbar-toggler fas fa-search" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation"></button>
   </nav>
+
 </div>
