--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,8 @@ $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+$gray: #CFCFCD;
 $light-gray: #F4F4F4;
+$purple: #9A879D;
+$dark-purple: #372229;
+$medium-gray: #AAAAA8;
