--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
-  background: #F4F4F4;
+  background: rgba(170,170,168,0.7);
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
@@ -12,15 +12,12 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
-  opacity: 0.15;
+  color: $dark-purple;
+  opacity: 0.8;
   text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
+  font-size: 40px;
+  padding: 0px 20px;
 }
 .footer-links a:hover {
-  opacity: 1;
-}
-.footer .fa-heart {
-  color: #D23333;
+  opacity: 0.2;
 }
