--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,3 +5,8 @@
  <% end %>
  <%= link_to "Add dose", new_cocktail_dose_path(@cocktail)  %>
 
+<% @cocktail.photos.each do |photo| %>
+  <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+<% end %>
+
+<%= link_to "Cocktails", cocktails_path  %>
