--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,8 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-  </div>
-  <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+    <a href="https://github.com/JohnMarsden24" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.instagram.com/average_jonny/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/john.marsden.90" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.linkedin.com/in/johnmarsden24/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
 </div>
