--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -2,3 +2,12 @@
   color: $gray;
   opacity: .7;
 }
+
+
+.card-btn {
+  background: #372229;
+  width: 100%;
+  padding: 8px;
+  border-radius: 0 0 16px 16px;
+
+}
