--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.2)), url("https://res.cloudinary.com/dyyo3sihs/image/upload/v1582296782/1204509_efoi9t.jpg");
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.2)), url("1204509.jpg");
   background-size: cover;
   background-position: center;
   padding: 224px 0;
